saisie de ticket dans header pour recette
Ajout du bouton de saisie de ticket dans header pour recette

--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -16,8 +16,8 @@
       </svg>
     </button>
     <nav class="user-nav" id="user-nav">
-      <!--{{link 'community'}}
-      {{link 'new_request' class='submit-a-request'}}-->
+      <!--{{link 'community'}}-->
+      {{link 'new_request' class='submit-a-request'}}
       
       {{#if alternative_locales}}
         <div class="dropdown language-selector">{{current_locale.name}}
