--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -157,7 +157,7 @@
       </footer>
  <div class="article-more-questions">
           {{dc 'more_questions'}}
-      {{#link 'new_request' class='submit-a-request''}} Contactez-nous{{/link}}
+      {{#link 'new_request' class='submit-a-request'}} Contactez-nous{{/link}}
         </div>
       
       <div class="article-relatives">
