--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -17,7 +17,7 @@
     </button>
     <nav class="user-nav" id="user-nav">
       <!--{{link 'community'}}-->
-	  {{#if settings.recette}}
+	  {{#if settings.new_from_header}}
 	  
       {{link 'new_request' class='submit-a-request'}}
       {{/if}}
