--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -53,7 +53,7 @@
                        <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'smag_expert_orange.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'smag_expert_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'smag_expert_orange.svg'}})';" > </a>
 
                     {{else}} {{#is name "Smag Bovin"}}
-                       <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'bovin_bleu.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'bovin_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'bovin_bleu'}})';" > </a>
+                       <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'bovin_bleu.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'bovin_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'bovin_bleu.svg'}})';" > </a>
                     {{else}} {{#is name "LEA"}}
                        <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'LEA_vert.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'LEA_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'LEA_vert.svg'}})';" > </a>
                     {{else}} {{#is name "DATALABS"}}
