--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -1,1 +1,3 @@
+<meta name="robots" content="noindex">
+<meta name="google-site-verification" content="15wiBJFjTTNGD8aZxfeUeER_QIWvU8XaE0brEvQ7e3w" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
