--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -26,7 +26,7 @@ Leader français de l’informatique agricole, SMAG <br/> conçoit et édite des
           <a href="https://mysmag.tech">{{dc 'home'}}</a>
           </li>-->
           <li>
-          <a href="https://mysmag.tech">{{dc 'Alertes'}}</a>
+                    <a href="https://smag-group.zendesk.com/hc/fr/categories/115000650649">{{dc 'Alertes'}}</a>
           </li>
           <!--<li>
           <a href="https://mysmag.tech/formations/">{{dc 'training'}}</a>
