change to Notes de mises à jour

--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -195,7 +195,7 @@ window.onload = function () { Show("SDS");	};
       </header>
       <div class="section-tree">
          {{#each sections}}
-         {{#is name 'Informations Produit'}}
+         {{#is name 'Notes de mises à jour'}}
          <section class="section">
             <h3 class="page-section-tree-title">
                <a href='{{url}}' class="page-section-tree-title">
