--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -265,7 +265,7 @@ window.onload = function () { Show("SDS");	};
    <div class="category-content">
       <div id="main-content" class="section-tree">
          {{#each sections}}
-         {{#is name 'Informations Produit'}}
+         {{#is name 'Notes de mises à jour'}}
          {{else}}
          {{#is name 'Agenda Webformations'}}
          {{else}}
