--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-
 /*** AFFICHAGE DES ICONES CATEGORIES HOME PAGE ***/
 .amontCollecte{
   overflow: auto;
+  margin-top: 40px;
 }
 
 .amontCollecte img {
@@ -553,13 +553,26 @@ textarea:focus {
 }
 
 .container {
-  max-width: 868px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0 5%;
 }
 
-@media (min-width: 868px) {
+@media (min-width: 100%) {
   .container {
+    padding: 0;
+    width: 90%;
+  }
+}
+
+.container-home {
+  max-width: 70%;
+  margin: 0 auto;
+  padding: 0 5%;
+}
+
+@media (min-width: 70%) {
+  .container-home {
     padding: 0;
     width: 90%;
   }
@@ -1525,7 +1538,7 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   min-height: 50px;
   padding-bottom: 15px;
 }
@@ -1571,7 +1584,7 @@ ul {
   display: flex;
   flex: 1 0 240px;
   margin: 0 0 30px;
-  max-width: 250px;
+  max-width: 100%;
   height:100px;
   text-align: center;
 }
@@ -1583,7 +1596,7 @@ ul {
   display: flex;
   flex: 1 0 240px;
   margin: 0 0 30px;
-  max-width: 250px;
+  max-width: 100%;
   height:100px;
   text-align: center;
 }
@@ -1660,7 +1673,7 @@ ul {
 
 @media (min-width: 768px) {
   .section {
-    /**margin-bottom: 60px;**/
+    margin-bottom: 60px;
   }
 }
 
@@ -1852,7 +1865,7 @@ display: none;
 
 @media (min-width: 1024px) {
   .category-content {
-    flex: 0 0 100%;
+    flex: 1 1 100%;
   }
 }
 
@@ -1860,7 +1873,7 @@ display: none;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  
+  justify-content: space-between;
 }
 
 @media (min-width: 768px) {
@@ -1875,7 +1888,7 @@ display: none;
 
 @media (min-width: 768px) {
   .section-tree .section {
-    flex: 0 0 45%;
+    flex: 1 1 45%;
     /* Two columns for tablet and desktop. Leaving 5% separation between columns */
   }
 }
@@ -1921,7 +1934,7 @@ display: none;
 
 @media (min-width: 1024px) {
   .section-content {
-    flex: 0 0 100%;
+    flex: 1 1 100%;
   }
 }
 
@@ -4582,7 +4595,7 @@ display: none;
 @media (min-width: 1024px) {
   .search-results-sidebar {
     border: 0;
-    flex: 0 0 20%;
+    flex: 0 0 40%;
     height: auto;
   }
 }
