--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -12,7 +12,7 @@
 </section>
 -->
 
-<div class="container">
+<div class="container-home">
   {{#if promoted_articles}}
       <section class="articles">
         <h1>{{t 'promoted_articles'}}</h1>
