--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -19,7 +19,7 @@
           <p class="page-header-description">{{category.description}}</p>
          {{/if}}
       </header>
-      <div class="section-tree">
+      <div class="section-top">
          {{#each sections}}
          {{#is description 'ontop'}}
          <section class="section">
