--- a/style.css
+++ b/style.css
@@ -1873,7 +1873,7 @@ display: none;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 @media (min-width: 768px) {
