--- a/style.css
+++ b/style.css
@@ -48,9 +48,11 @@
 }
 
 .logoCategory {
-  margin:-1px;
-   width: 100%;
-  height: 100%;
+  
+   margin-top: -1px;
+  margin-bottom: -1px;
+  margin-right: -1px;
+  margin-left: -1px;
        
   background-position: center;
   background-repeat: no-repeat;
