--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@
   margin-bottom: -1px;
   margin-right: -1px;
   margin-left: -1px;
-       
+          width: 100%;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
