lien facebook + favicon

--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -51,7 +51,7 @@ Leader français de l’informatique agricole, SMAG <br/> conçoit et édite des
             <a href="https://www.youtube.com/channel/UCwkE7rndASxb6owyxVxgTYw" target="_blank"></a>
           </li>
           <li class="logo logo-facebook">
-            <a href="https://www.facebook.com/SmagFarmer/" target="_blank"></a>
+            <a href="https://www.facebook.com/SmagFarm/" target="_blank"></a>
           </li> 
           
         </ul>
