--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -18,8 +18,9 @@
     <nav class="user-nav" id="user-nav">
       <!--{{link 'community'}}-->
 	  {{#if settings.new_from_header}}
-	  
+	  {{#if signed_in}}
       {{link 'new_request' class='submit-a-request'}}
+	  {{/if}}
       {{/if}}
       {{#if alternative_locales}}
         <div class="dropdown language-selector">{{current_locale.name}}
