--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -19,7 +19,7 @@
       <!--{{link 'community'}}-->
 	  {{#if settings.new_from_header}}
 	  {{#if signed_in}}
-      {{link 'new_request' class='submit-a-request'}}
+          {{#link 'new_request' class='submit-a-request'}}{{dc 'contact'}}{{/link}}
 	  {{/if}}
       {{/if}}
       {{#if alternative_locales}}
