--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -23,9 +23,9 @@
 	  {{/if}}
       {{/if}}
       {{#if alternative_locales}}
-        <div class="dropdown language-selector">{{current_locale.name}}
+        <div class="dropdown language-selector">
           <button class="dropdown-toggle language-selector" aria-haspopup="true">
-            
+            {{current_locale.name}}
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon" aria-hidden="true"> 
               <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/></svg>
           </button>
