--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -142,6 +142,10 @@
             <small class="article-votes-count">
               {{vote 'label' class='article-vote-label'}}
             </small>
+            <div class="negative-followup__c">
+<p>We're sorry to hear that!</p>
+<a href="/hc/en-us/requests/new">Please tell us why.</a>
+</div>
           </div>
         {{/with}}
 
