--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -56,7 +56,7 @@
                     {{else}} 
 					<!--Diagnostic-->
 					{{#is id 360000740278}}
-                       <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'smag_diag_orange.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'smag_diag_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'smag_diag_orange.svg'}})';" > </a>
+                       <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'trace_orange.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'trace_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'trace_orange.svg'}})';" > </a>
 
                     {{else}} 
 					<!--Smag Farmer-->
