Restriction tickets Endusers

--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -34,7 +34,7 @@
           <li>
           <a href="https://mysmag.tech/faqs/">{{dc 'faq'}}</a>
           </li>-->
-          <li>
+          <li id="contactFormFooter">
           {{#link 'new_request' class='submit-a-request'}}{{dc 'contact'}}{{/link}}
           </li>
         </ul>
