--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -157,7 +157,7 @@
       </footer>
  <div class="article-more-questions">
           {{dc 'more_questions'}}
-      <a class="article-subscribe" href="https://smag-group.zendesk.com/hc/requests/new">{{dc 'contact_us'}}</a>
+      <a id="contactFormArticlePage" class="article-subscribe" href="https://smag-group.zendesk.com/hc/requests/new">{{dc 'contact_us'}}</a>
         </div>
       {{#if settings.show_article_comments}}
         <div class="article-comments" id="article-comments">
