--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -12,7 +12,7 @@ document.addEventListener('DOMContentLoaded', function() {
          var element = document.getElementById("contactFormFooter");
         if(element!=null)
           {
-    			element.outerHTML = '{{dc 'contactYourTech'}}';
+    			element.remove();
             }
          var element = document.getElementById("contactFormArticlePage");
         if(element!=null)
