New erquest page restriction for endusersChanges

--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -17,8 +17,9 @@
       {{follow_up}}
     </span>
   </h1>
-
+ <div id = "NewTicketForm">
   <div id="main-content" class="form">
     {{request_form}}
   </div>
+</div>
 </div>
