--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -19,6 +19,12 @@ document.addEventListener('DOMContentLoaded', function() {
           {
     			element.outerHTML = '{{dc 'contactYourTech'}}';
             }
+			 var element2 = document.getElementById("NewTicketForm");
+  if(element2!=null)
+          {
+    			element2.outerHTML = '{{dc 'contactYourTech'}}';
+  
+            }
       } 
         } 
       
