--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -77,8 +77,8 @@
                        <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'LEA_vert.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'LEA_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'LEA_vert.svg'}})';" > </a>
                     {{else}} 
 					<!--DATALABS-->
-					{{#is id 1234567}}
-                       <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'datalabs_gris.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'datalabs_blanc.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'datalabs_gris.svg'}})';" > </a>
+					{{#is id 360002949577}}
+                       <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'Logo_Datalabs_Gris_BL.svg'}})" onmouseover="this.style.backgroundImage='url({{asset 'Logo_Datalabs_Blanc_BL.svg'}})';" onmouseout="this.style.backgroundImage='url({{asset 'Logo_Datalabs_Gris_BL.svg'}})';" > </a>
                     {{else}} 
 					{{#is id 360001298577}}
 					 <a href='{{url}}' class="logoCategory" style="background-image: url({{asset 'MySmag_Aide.png'}})" onmouseover="this.style.backgroundImage='url({{asset 'MySmag_Aide_Hover.png'}})';" onmouseout="this.style.backgroundImage='url({{asset 'MySmag_Aide.png'}})';" > </a>
