--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -17,6 +17,14 @@
       {{follow_up}}
     </span>
   </h1>
+   <h4>
+Votre satisfaction est au cœur de nos préoccupations afin de vous répondre dans les meilleurs délais, nous faisons évoluer la saisie de vos demandes/tickets !
+     <br/>
+     Vous trouverez désormais une liste déroulante qui vous permettra de mieux spécifier votre demande/ attente  (modules/fonctionnalité) et accélérer la prise en charge de vos demandes.
+     <br/>
+     <br/>
+Nous allons prendre en charge votre demande dans les meilleurs délais et nous vous remercions pour votre participation à l'amélioration de nos solutions.
+  </h4>
  <div id = "NewTicketForm">
   <div id="main-content" class="form">
     {{request_form}}
