--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -17,8 +17,11 @@
       {{follow_up}}
     </span>
   </h1>
-   <h4>
-Votre satisfaction est au cœur de nos préoccupations afin de vous répondre dans les meilleurs délais, nous faisons évoluer la saisie de vos demandes/tickets !
+   <h3>
+Votre satisfaction est au cœur de nos préoccupations 
+</h3>
+<h4>
+afin de vous répondre dans les meilleurs délais, nous faisons évoluer la saisie de vos demandes/tickets !
      <br/>
      Vous trouverez désormais une liste déroulante qui vous permettra de mieux spécifier votre demande/ attente  (modules/fonctionnalité) et accélérer la prise en charge de vos demandes.
      <br/>
