--- a/style.css
+++ b/style.css
@@ -801,11 +801,12 @@ ul {
 .form-field label {
   display: block;
   font-size: 13px;
+  font-weight: bold;
   margin-bottom: 5px;
 }
 
 .form-field input {
-  border: 1px solid #ddd;
+  border: 1px solid $brand_color;;
   border-radius: 4px;
   padding: 10px;
   width: 100%;
@@ -816,7 +817,7 @@ ul {
 }
 
 .form-field input[type="text"] {
-  border: 1px solid #ddd;
+  border: 1px solid $brand_color;
   border-radius: 4px;
 }
 
